# ghostium

./: .dockerignore  .gitignore  .tool-versions  Dockerfile  README.md  pyproject.toml
app/: main.py
